# riscv_sim

./: .clang-format  .gitignore  CMakeLists.txt  FORMAT.md  README.md  TODO.md  sim.cpp  sim.h  simulation.cpp
elements/: CMakeLists.txt  alu.h  branch_predictor.h  control_unit.h  dmem.h  hazard_unit.cpp  hazard_unit.h  imem.h  imm.h  mux.h  regfile.h
stages/: CMakeLists.txt  stage.h  stage_decode.h  stage_execute.h  stage_fetch.h  stage_memory.h  stage_writeback.h
stages/tests/: tests_decode.cpp  tests_execute.cpp  tests_fetch.cpp  tests_memory.cpp
tests/: tests_control_flow_conflict.cpp  tests_data_flow_conflict.cpp  tests_pipeline.cpp  tests_sequence.cpp  tests_single_op.cpp
utils/: CMakeLists.txt  defines.h  ins.h  pc.h  registers.h  simulation_state.h
utils/tests/: test_ins.cpp  tests_instructions.cpp  tests_instructions_B.cpp  tests_instructions_I.cpp  tests_instructions_J.cpp  tests_instructions_R.cpp  tests_instructions_S.cpp  tests_instructions_U.cpp
